syntax = "proto3";

package go.micro.service.project;

service ProjectService {
  rpc Read(ReadRequest) returns (ReadResponse) {};
  rpc Create(CreateRequest) returns (CreateResponse) {};
  rpc Update(UpdateRequest) returns (UpdateResponse) {};
  rpc List(ListRequest) returns (ListResponse) {};
  rpc AddMember(AddMemberRequest) returns (AddMemberResponse) {};
  rpc RemoveMember(RemoveMemberRequest) returns (RemoveMemberResponse) {};
  rpc ListMemberships(ListMembershipsRequest) returns (ListMembershipsResponse) {};
}

message Project {
  string id = 1;
  string name = 2;
  string description = 3;
  string repository = 4;
  repeated Member members = 5;
}

message Member {
  string id = 1;
}

message ReadRequest {
  string id = 1;
}

message ReadResponse {
  Project project = 1;
}

message CreateRequest {
  Project project = 1;
}

message CreateResponse {
  Project project = 1;
}

message UpdateRequest {
  Project project = 1;
}

message UpdateResponse {}

message ListRequest {}

message ListResponse {
  repeated Project projects = 1;
}

message AddMemberRequest {
  string project_id = 1;
  string member_id = 2; 
}

message AddMemberResponse {}

message RemoveMemberRequest {
  string project_id = 1;
  string member_id = 2; 
}

message RemoveMemberResponse {}

message ListMembershipsRequest {
  string member_id = 1;
}

message ListMembershipsResponse {
  repeated Project projects = 1;
}
